# open-football-analytics

./: .gitignore  .gitmodules  README.md  pyproject.toml
animations/: __init__.py  adapters.py  animator.py  matplotsoccer.py
vaep/: README.md  __init__.py  statsbomb_actions.py  train_statsbomb_vaep.py  vaep_features.py  vaep_formula.py  vaep_labels.py  vaep_model.py
vaep/notebooks/: vaep_tutorial.ipynb
xg/: README.md  __init__.py  skillcorner_shots.py  train_skillcorner_xg.py  xg_features.py  xg_surface.py
xg/notebooks/: xg_tutorial.ipynb
xpass/: README.md  __init__.py  pass_clusters.py  skillcorner_passes.py  train_skillcorner_xpass.py  xpass_features.py  xpass_plots.py
xpass/notebooks/: xpass_tutorial.ipynb
xthreat/: README.md  __init__.py  bepro_actions.py  interactive_danger_zones.py  skillcorner_actions.py  train_skillcorner_xthreat.py  xthreat_model.py  xthreat_plots.py
xthreat/notebooks/: xthreat_tutorial.ipynb
xthreat/scripts/: run_xthreat_experiment.sh
