[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "football-analytics"
version = "0.1.0"
description = "Open football analytics experiments for xG, xPass, and xThreat."
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.7",
    "mplsoccer>=1.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=12",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
models = [
    "lightgbm>=4",
    "xgboost>=2",
]
notebooks = [
    "ipykernel>=6",
    "ipython>=8",
    "jupyter>=1",
]

[tool.setuptools.packages.find]
where = [".", "football-cdf"]
include = ["animations*", "football_cdf*", "xg*", "xpass*", "xthreat*"]
